force-app/main/default/objects/LLC_BI__Checklist__c/LLC_BI__Checklist__c.object-meta.xml
<CustomObject>
    <description>A Checklist defines a list of Requirements to be fulfilled in order to complete a business process or workflow.</description>
    <label>Checklist</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>