force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related relationship record which this Checklist pertains.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>