force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Actual_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Actual_Duration_Days__c</fullName>
    <description>This optional field contains the number of days taken to complete this Checklist.</description>
    <inlineHelpText>This optional field contains the number of days taken to complete this Checklist.</inlineHelpText>
    <label>Actual Duration Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>