force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Id__c</fullName>
    <description>This required field contains the id of the sObject record to which this Checklist pertains.</description>
    <externalId>true</externalId>
    <inlineHelpText>This required field contains the id of the sObject record to which this Checklist pertains.</inlineHelpText>
    <label>Context Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>