force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Context_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Type__c</fullName>
    <description>This required field contains the fully qualified name of the sObject type to which this Checklist pertains.</description>
    <inlineHelpText>This required field contains the fully qualified name of the sObject type to which this Checklist pertains.</inlineHelpText>
    <label>Context Type</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>