force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Loan_Collateral2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Collateral2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Collateral Pledged record which this Checklist pertains.</description>
    <label>Collateral Pledged</label>
    <referenceTo>LLC_BI__Loan_Collateral2__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>