force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template__c</fullName>
    <description>This optional field contains the developer name of the Checklist Template on which this Checklist is based.</description>
    <externalId>true</externalId>
    <inlineHelpText>This optional field contains the developer name of the Checklist Template on which this Checklist is based.</inlineHelpText>
    <label>Template</label>
    <length>60</length>
    <type>Text</type>
</CustomField>