force-app/main/default/objects/LLC_BI__Checklist__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>