force-app/main/default/objects/LLC_BI__Checklist__c/listViews/Post_Booking_Queue_Checklist.listView-meta.xml
<ListView>
    <fullName>Post_Booking_Queue_Checklist</fullName>
    <filterScope>Queue</filterScope>
    <label>Post-Booking Queue</label>
    <queue>Post_Booking_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>